# enversal

./: .gitignore  Cargo.toml  README.md
blueprints/: data_analysis.yaml  enversal.yaml
brain/: Cargo.toml
brain/src/: gemini.rs  lib.rs  ollama.rs  prompt.rs
cli/: Cargo.toml
cli/src/: main.rs  tui.rs
core/: Cargo.toml
core/src/: agent.rs  environment.rs  lib.rs  limits.rs  manifest.rs
daemon/: Cargo.toml  build.rs
daemon/src/: error.rs  main.rs  registry.rs  service.rs
daemon/src/cognitive/: mod.rs
daemon/src/tools/: git.rs  mod.rs  node.rs  python.rs  shell.rs
docs/: enversal_architecture.md  enversal_spec.md
proto/: control.proto
sandbox/: Cargo.toml
sandbox/src/: config.rs  lib.rs  linux.rs  macos.rs
