[package]
name = "brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cognitive engine and LLM integration for Enversal Agents"

[dependencies]
enversal_core = { package = "core", path = "../core" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
secrecy = "0.10.3"
regex = "1.10"

[dev-dependencies]
uuid = { version = "1.8", features = ["v4"] }
