[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Command-line interface for the Enversal Control Plane"

[dependencies]
enversal_core = { package = "core", path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.32", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde_json = "1.0"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tui-markdown = "0.3.7"

[build-dependencies]
tonic-build = "0.10"
