[package]
name = "sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Native OS sandboxing and execution engine for Enversal"

[dependencies]
core = { path = "../core" }
anyhow = "1.0"
cfg-if = "1.0"

[dev-dependencies]
uuid = { version = "1.8", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
